--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ build/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/*
 *.iws
 *.iml
 *.ipr
@@ -19,7 +20,7 @@ out/
 
 ### Kotlin ###
 .kotlin
-
+.run/*
 ### Eclipse ###
 .apt_generated
 .classpath
